# auto-zzz

./: .gitignore  README.md  pyproject.toml
autozzz/: clear_virus.py  cnocr_ctl.py  constants.py  fighter.py  gold_service.py  hollow.py  pyautogui_ctl.py  task.py  task.yaml  task_executor.py  tesseract_ocr.py  window.py  work.py  zzz_panel.py
pyautopanel/: main.py
pyautopanel/module/trip/captain_publish/: approve.py  publish_b.py  publish_test.py
pyautopanel/module/trip/qconfig_publish/: main.py
pyautopanel/module/trip/xshell_login/: main.py
pyautopanel/module/zzz/: hollow_search.py
pyautopanel/panel/: trip_panel.py  zzz.panel.py
pyautopanel/tool/: ctl.py
pyautopanel/trip/: trip_panel.py
pyautopanel/trip/captain_publish/: approve.py  publish_b.py  publish_test.py
pyautopanel/trip/hollow/: __init__.py
pyautopanel/trip/infosafe_adjust/: main.py
pyautopanel/trip/qconfig_publish/: main.py
pyautopanel/trip/tool/: notify.py
pyautopanel/trip/xshell_login/: auth.py  login.py  main.py
pyautopanel/zzz/: admin_check.py  cnocr_ctl.py  cnocr_ocr.py  constants.py  fighter.py  hollow.py  hollow_search.py  notify.py  pyautogui_ctl.py  task.py  task.yaml  task_executor.py  timer.py  window.py  zzz.panel.py  zzz_panel.py
tests/: test.yaml  test2.yaml  test_cnocr_ocr.py  test_panel.py  test_yaml_loader.py
