[tool.poetry]
name = "pyautopanel"
version = "0.1.0"
description = ""
authors = ["Rain <iheyu22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
keyboard = "^0.13.5"
pydirectinput = "^1.0.4"
oathtool = "^2.3.1"
pyperclip = "^1.9.0"
ttkbootstrap = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
